--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="ie.wspace.lab4notesapp.MainActivity">
+    tools:context="ie.wspace.timemanagementapp.MainActivity">
     <item
         android:id="@+id/action_add_sample_data"
         android:orderInCategory="100"
