--- a/app/src/main/res/layout/content_editor.xml
+++ b/app/src/main/res/layout/content_editor.xml
@@ -9,11 +9,11 @@
     tools:showIn="@layout/activity_editor">
 
     <EditText
-        android:id="@+id/note_text"
+        android:id="@+id/task_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
-        android:hint="@string/enter_note"
+        android:hint="@string/enter_task"
         android:inputType="textMultiLine|textCapSentences"/>
 
 </androidx.core.widget.NestedScrollView>
