--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -10,6 +10,6 @@
     <item
         android:id="@+id/action_delete_all"
         android:orderInCategory="100"
-        android:title="@string/delete_all_notes"
+        android:title="@string/delete_all_tasks"
         app:showAsAction="never" />
 </menu>
