Added theme colors

--- a/app/src/main/res/layout/task_list_item.xml
+++ b/app/src/main/res/layout/task_list_item.xml
@@ -10,7 +10,7 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:backgroundTint="@color/colorPrimary"
+        app:backgroundTint="@color/primaryColor"
         app:fabSize="mini"
         android:layout_margin="@dimen/list_fab_margin"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -28,7 +28,7 @@
         android:maxLines="2"
         android:ellipsize="end"
         android:textSize="@dimen/list_text_size"
-        android:textColor="@color/list_text_color"
+        android:textColor="@color/primaryTextColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/fab"
