--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,6 +12,7 @@
         android:id="@+id/recycler_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@color/backgroundColor"
         android:clickable="true"
         android:focusable="true"
         android:focusableInTouchMode="true"
