--- a/app/src/main/res/layout/task_timer.xml
+++ b/app/src/main/res/layout/task_timer.xml
@@ -47,8 +47,6 @@
         android:text="@string/action_stop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/timer_pause"
-        android:visibility="invisible"
-        tools:visibility="visible"/>
+        app:layout_constraintTop_toBottomOf="@+id/timer_pause" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
