--- a/app/src/main/res/layout/content_editor.xml
+++ b/app/src/main/res/layout/content_editor.xml
@@ -11,10 +11,9 @@
 
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/task_time"
@@ -31,7 +30,7 @@
             android:id="@+id/open_timer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Button" />
+            android:text="@string/start_timer" />
 
         <EditText
             android:id="@+id/task_text"
