--- a/app/src/main/res/layout/task_timer.xml
+++ b/app/src/main/res/layout/task_timer.xml
@@ -23,6 +23,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="81dp"
+        android:background="@color/backgroundColor"
+        android:textColor="@color/primaryTextColor"
         android:text="@string/action_start"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,6 +34,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:background="@color/backgroundColor"
+        android:textColor="@color/primaryTextColor"
         android:text="@string/action_pause"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,6 +48,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:background="@color/backgroundColor"
+        android:textColor="@color/primaryTextColor"
         android:text="@string/action_stop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
