--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primaryColor">#d81b60</color>
+    <color name="primaryColor">#D81B60</color>
     <color name="primaryLightColor">#ff5c8d</color>
     <color name="primaryDarkColor">#a00037</color>
     <color name="secondaryColor">#2196f3</color>
     <color name="secondaryLightColor">#6ec6ff</color>
     <color name="secondaryDarkColor">#0069c0</color>
-    <color name="primaryTextColor">#dad7d1</color>
+    <color name="primaryTextColor">#DAD7D1</color>
     <color name="secondaryTextColor">#000000</color>
     <color name="backgroundColor">#121212</color>
     <color name="cardColor">#1d1d1d</color>
